若干细节修复